[package]
name = "async-tar"
version = "0.5.0"
authors = ["dignifiedquire <me@dignifiequire.com>", "Alex Crichton <alex@alexcrichton.com>"]
homepage = "https://github.com/dignifiedquire/async-tar"
repository = "https://github.com/dignifiedquire/async-tar"
documentation = "https://docs.rs/async-tar"
license = "MIT/Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"
edition = "2018"
exclude = ["tests/archives/*"]
resolver = "2"

description = """
A Rust implementation of an async TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
bytes = "1"
filetime = "0.2.8"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
pin-project = "1.0.8"
tokio = { version = "1", features = ["fs", "io-util"] }
tokio-uring = { version = "0.5", features = ["bytes"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros"] }

[target."cfg(unix)".dependencies]
libc = "0.2"
xattr = { version = "0.2", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2"

[patch.crates-io]
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring.git" }

[features]
default = [ "xattr" ]
